--- a/royal.css
+++ b/royal.css
@@ -1,4 +1,4 @@
-        body
+   body
         {
             background-color: #F5F5F5;
             color: #555;
@@ -24,7 +24,7 @@
             width:100%;
             position: fixed;
             box-shadow: 0px 0px 15px 0px rgb(143, 143, 143); 
-            z-index: 1; 
+            z-index: 2; 
           }
             
         .topnav a
@@ -78,18 +78,16 @@
         }
         .rightSideButtons
         {
-             float: right;
+             text-align: right;
         }
         .locationPhone
         {
             background-color: rgb(255, 255, 255);
-            border: none;
             border: 1px solid  rgb(255, 220, 103);
             border-radius: 4px;
             color: rgb(0, 0, 0);
-            text-align: center;
             padding: 7px 15px;
-            margin-left: 58x;
+            margin-left: 80px;
             margin-bottom: 5px;
             text-decoration: none;
             transition-duration: 00.6s;
@@ -275,54 +273,42 @@
             width: 100%;
             position: relative;
             margin: 0px;
-            padding: 20px 0px 0px 10dp;
+            padding:0px;
+            overflow: hidden;
         }
         .mySlides
         {
             display: none;
-        }
-        .prev, .next
-        {
-            cursor: pointer;
-            position: absolute;
-            top: 50%;
-            width: auto;
-            margin-top: -22px;
-            padding: 16px;
-            color: rgb(0, 0, 0);
-            font-weight: bold;
-            font-size: 18px;
-            transition: 0.6s ease;
-            border-radius: 0 3px 3px 0;
-            user-select: none;
-        }
-        .next
-        {
-            right: 0;
-            border-radius: 3px 0 0 3px;
-        }
-        .prev:hover, .next:hover {
-            background-color: rgba(0,0,0,0.8);
+            overflow: hidden;
         }
         .text {
-            color: #ffe600;
+            color: #000000;
+            text-decoration: underline;
+            text-decoration-color: #f1cd00;
             font-weight: bold;
-            font-size: 25px;
+            font-size: 100%;
             padding: 8px 12px;
+            margin-top: 5px;
             position: absolute;
-            bottom:  8px;
+            top:  8px;
             width: 100%;
+            z-index: 1;
             text-align: center;
+        }
+        .dots{
+            position:absolute
         }
         .dot
         {
+            z-index: 10;
             cursor: pointer;
-            height: 15px;
-            width: 15px;
-            margin: 0 2px;
-            background-color: #bbb;
+            height: 8px;
+            width: 8px;
+            margin: 0px 5px;
+            background-color: rgb(158, 158, 158);
             border-radius: 50%;
             display: inline-block;
+            position: relative;
             transition: background-color 0.6s ease;
         }
         .active, .dot:hover
@@ -332,14 +318,14 @@
         .fade
         {
             -webkit-animation-name: fade;
-            -webkit-animation-duration: 1.5s;
+            -webkit-animation-duration: 2s;
             animation-name: fade;
-            animation-duration: 1.5s;
+            animation-duration: 2s;
         }
         @-webkit-keyframes fade
         {
             from {opacity: .4}
-            to {opacity: 1}
+            to {opacity: .4}
         }
           
         @keyframes fade
@@ -357,42 +343,7 @@
     {
         display: none;
     }
-    .container
-    {
-        font-size: 10px;
-        position: absolute;
-        left: 0;
-        margin-top: 130px;
-        margin-left: 200px;
-        max-width: 400px;
-        padding: 20px;
-        border-radius: 8px;
-        background-color: white;
-        box-shadow:  0px 0px 15px 0px rgb(56, 56, 56) ;
-        display: block;
-    }
-    input
-    {
-        margin: 0;
-        border: 1px solid #c4c4c4;
-        border-radius: 5px;
-        background-color: rgb(241, 241, 241);
-        padding: 3px 5px;
-        box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
-        width: 180px;
-        opacity: 0.5;
-    }
-    select
-    {
-        font-size: 8px;
-        margin: 0;
-        width: 180px;
-        height: 30px;
-        border: 1px solid rgb(187, 187, 187);
-        background: #ffffff;
-        border-radius: 4px;
-        opacity: 0.5;
-    }
+    
     .homeImage
     {
         background-image: url("img/Home_bakground.jpg");
@@ -438,7 +389,7 @@
         height: max-content;
         width:100%;
         position: fixed;
-        z-index: 1;
+        z-index: 2;
         box-shadow: 0px 0px 15px 0px rgb(143, 143, 143);  
     }
     .topnav a
@@ -611,7 +562,7 @@
         text-decoration: none;
         transition-duration: 00.6s;
         display: inline-block;
-        right: 100px;
+        right: 20px;
         position: relative;
     }
     .topnav .menuBarIcon
@@ -623,6 +574,42 @@
     .topnav  .menuBarIcon:hover
     {
         background-color: #e0e0e0;
+    }
+    .container
+    {
+        font-size: 10px;
+        position: absolute;
+        left: 0;
+        margin-top: 130px;
+        margin-left: 200px;
+        max-width: 400px;
+        padding: 20px;
+        border-radius: 8px;
+        background-color: white;
+        box-shadow:  0px 0px 15px 0px rgb(56, 56, 56) ;
+        display: block;
+    }
+    input
+    {
+        margin: 0;
+        border: 1px solid #c4c4c4;
+        border-radius: 5px;
+        background-color: rgb(241, 241, 241);
+        padding: 3px 5px;
+        box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+        width: 180px;
+        opacity: 0.5;
+    }
+    select
+    {
+        font-size: 8px;
+        margin: 0;
+        width: 180px;
+        height: 30px;
+        border: 1px solid rgb(187, 187, 187);
+        background: #ffffff;
+        border-radius: 4px;
+        opacity: 0.5;
     }
 
     .sidenav
@@ -707,6 +694,10 @@
     .ImageSlides
     {
         display: block;
+    }
+    .text{
+        font-size: 25px;
+        margin-top: 20px;
     }
     * {box-sizing:border-box}      
 }
